force-app/main/default/objects/Order__c/fields/Payable_total__c.field-meta.xml
<CustomField>
    <fullName>Payable_total__c</fullName>
    <formula>Total_before_GST__c + ( Total_before_GST__c * 0.09) + ( Total_before_GST__c * 0.09)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>