force-app/main/default/objects/Order__c/fields/Table_No__c.field-meta.xml
<CustomField>
    <fullName>Table_No__c</fullName>
    <label>Table No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>