force-app/main/default/objects/Order__c/fields/Total_before_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_before_GST__c</fullName>
    <label>Total before GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>